# bt-motion-planning

./: .gitignore  CMakeLists.txt  benchmark_script.sh  main.cpp  plot1d_script.sh  plot2d_script.sh  plot_script.sh
ToyExamples/: RigidBody3D.cpp  RigidBody3D.h  Time1D.cpp  Time1D.h
data/benchmarks/: plot_both.py  plot_optimization.py  plot_points.py  plot_success_rate.py
generator/: generator.py
src/: CMakeLists.txt  auxillary.cpp  auxillary.h  main.cpp
src/Benchmark/: Benchmarker.cpp  Benchmarker.h
src/Dubins/: DubinsConstraint.h  DubinsMotionValidator.cpp  DubinsMotionValidator.h  DubinsPlanner.cpp  DubinsPlanner.h  DubinsStateValidityChecker.cpp  DubinsStateValidityChecker.h
src/Dubins/goals/: DubinsGoalRegion.cpp  DubinsGoalRegion.h  DubinsGoalSampler.cpp  DubinsGoalSampler.h
src/MotionQuery2D/: MQ2DGoal.cpp  MQ2DGoal.h  MQ2DMotionValidator.cpp  MQ2DMotionValidator.h  MQ2DStateValidityChecker.cpp  MQ2DStateValidityChecker.h  MotionQuery2DPlanner.cpp  MotionQuery2DPlanner.h  Point.h  QueryExecutor.cpp  QueryExecutor.h  StaticConstraint.h
src/SpaceTimePlanning/: AnimationStateSpace.cpp  AnimationStateSpace.h  MinimizeArrivalTime.cpp  MinimizeArrivalTime.h  SpaceTimeMotionValidator.cpp  SpaceTimeMotionValidator.h  SpaceTimePlanner.cpp  SpaceTimePlanner.h  SpaceTimeRRT.cpp  SpaceTimeRRT.h  SpaceTimeStateValidityChecker.cpp  SpaceTimeStateValidityChecker.h
src/SpaceTimePlanning/goals/: SpaceTimeGoalRegion.cpp  SpaceTimeGoalRegion.h  SpaceTimeSampler.cpp  SpaceTimeSampler.h
src/SpaceTimePlanning/spaces/: AnimationStateSpace.cpp  AnimationStateSpace.h
src/Time1D/: Constraint.h  Time1DGoal.cpp  Time1DGoal.h  Time1DGoalRegion.cpp  Time1DGoalRegion.h  Time1DMotionValidator.cpp  Time1DMotionValidator.h  Time1DPlanner.cpp  Time1DPlanner.h  Time1DStateValidityChecker.cpp  Time1DStateValidityChecker.h  Time1DValidStateSampler.cpp  Time1DValidStateSampler.h
src/Time1D/goals/: VectorSpaceGoalRegion.cpp  VectorSpaceGoalRegion.h
src/Time2D/: Constraint.h  SpaceTimeMotionValidator.cpp  SpaceTimeMotionValidator.h  SpaceTimePlanner.cpp  SpaceTimePlanner.h  SpaceTimeStateValidityChecker.cpp  SpaceTimeStateValidityChecker.h  Time2DMotionValidator.cpp  Time2DMotionValidator.h  Time2DPlanner.cpp  Time2DPlanner.h  Time2DStateValidityChecker.cpp  Time2DStateValidityChecker.h
src/Time2D/goals/: SpaceTimeGoalRegion.cpp  SpaceTimeGoalRegion.h  SpaceTimeSampler.cpp  SpaceTimeSampler.h  Time2DGoalRegion.cpp  Time2DGoalRegion.h  Time2DSampler.cpp  Time2DSampler.h
src/TimeND/: TimeNDConstraint.h  TimeNDGoal.cpp  TimeNDGoal.h  TimeNDMotionValidator.cpp  TimeNDMotionValidator.h  TimeNDNarrowPassageValidityChecker.cpp  TimeNDNarrowPassageValidityChecker.h  TimeNDPlanner.cpp  TimeNDPlanner.h  TimeNDStateValidityChecker.cpp  TimeNDStateValidityChecker.h
src/ToyExamples/: Time1D.cpp  Time1D.h  Time1DGoal.cpp  Time1DGoal.h  Time1DGoalRegion.cpp  Time1DGoalRegion.h  Time1DMotionValidator.cpp  Time1DMotionValidator.h  Time1DPlanner.cpp  Time1DPlanner.h  Time1DStateValidityChecker.cpp  Time1DStateValidityChecker.h  Time1DValidStateSampler.cpp  Time1DValidStateSampler.h
src/ToyExamples/planner/: TimeRRT.cpp  TimeRRT.h
src/ToyExamples/structs/: Constraint.h
src/structs/: Constraint.h  Constraint2D.h
visualization/: drawcover.py  drawnarrowscenario.py  drawscenario.py  plot.py  plot1d.py  plot2d.py  plotcones.py  plotdebug.py  plotdubins.py  plotmotionquery.py  plotmotionqueryoverview.py  plotnarrow.py  visualizetestset.py
